<resources>
    <string name="app_name">Ear Trainer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_time">Total Time:</string>
    <string name="question">Question:</string>
    <string name="time_left">Time Left:</string>

    <string name="hz">%1$sHz</string>
    <string name="time">%1$s:%2$s</string>
    <string name="questionNum">%1$d/%2$s</string>
    <string name="take_test">Take Test</string>
    <string name="tries_left">Tries Left:</string>
    <string name="home">Home</string>
    <string name="retry">Retry</string>
    <string name="score">Score:</string>
    <string name="your_score">Your score:</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="ear_trainer">Ear Trainer</string>

    <string name="high_end_pad_summary">How much the high end will be padded (in dB)</string>
    <string name="crossover_summary">At what frequency the EQ will begin padding. There will also be a transition band that is half of this frequency.</string>
</resources>